@@ -1,11 +1,13 @@
 @echo off
-javac -encoding UTF-8 ..\File_manager\FileManager.java Main.java
+copy ..\File_manager\FileManager.class . >nul
+javac Main.java
 
 if errorlevel 1 (
     echo Compilation failed!
-    pause
+    del FileManager.class
     exit /b 1
 )
 
-java -cp ".;..\File_manager" Main
+java --enable-native-access=ALL-UNNAMED Main 2>nul
+del FileManager.class
 exit /b 0
